Created the add task fuctionality. Integrated with dropbox using angular drop box picker

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Shivanand",
   "license": "ISC",
   "dependencies": {
+    "angular-dropbox-picker": "0.0.2",
     "express": "^4.14.0"
   }
 }
